# network-test-automation-framework

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  contributing.md  setup.md
jsnapy/: config.yml
jsnapy/testfiles/: test_bgp_neighbors.yml  test_evpn_routes.yml  test_interfaces.yml  test_lldp_neighbors.yml  test_ospf_adjacency.yml
results/lab-output/: ai-triage-report.txt  integration-test-results.txt  lab-validation.txt
robot_tests/: 01_topology_validation.robot  02_bgp_validation.robot  03_evpn_vxlan_tests.robot  04_failover_convergence.robot
robot_tests/resources/: common.resource  keywords.resource
src/: __init__.py
src/analysis/: __init__.py  batfish_validator.py  topology_verifier.py
src/core/: __init__.py  base_driver.py  exceptions.py  snapshot_engine.py  validator.py
src/drivers/: __init__.py  arista_driver.py  cisco_driver.py  driver_factory.py  juniper_driver.py
src/inventory/: __init__.py  inventory_manager.py
src/reporting/: __init__.py  report_generator.py
src/reporting/templates/: report_template.html
src/traffic/: __init__.py  ixia_client.py  traffic_generator.py
src/triage/: __init__.py  defect_report.py  log_analyzer.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_driver_integration.py  test_live_lab.py
tests/unit/: __init__.py  test_base_driver.py  test_driver_factory.py  test_log_analyzer.py  test_snapshot_engine.py  test_validator.py
topology/: Makefile  containerlab-topology.yml  docker-compose.yml
topology/configs/arista/: leaf1.conf  spine1.conf
topology/configs/cisco/: wan-router.conf
topology/configs/juniper/: leaf1.conf  leaf2.conf  leaf3.conf  leaf4.conf  spine1.conf  spine2.conf  wan-edge.conf
topology/frr/leaf1/: frr.conf
topology/frr/leaf2/: daemons  frr.conf
topology/frr/leaf3/: frr.conf
topology/frr/leaf4/: frr.conf
topology/frr/spine1/: frr.conf
topology/frr/spine2/: frr.conf
topology/frr/wan-edge/: frr.conf
